--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
         "style-loader": "^3.3.3",
         "webpack": "^5.88.2",
         "webpack-cli": "^5.1.4"
+    },
+    "dependencies": {
+        "autoprefixer": "10.4.5",
+        "file-loader": "^6.2.0",
+        "html-loader": "^4.2.0"
     }
 }
